feat(ingest): create idempotent jobs
